@@ -1,3 +1,10 @@
+2009-04-10  Jesse van den Kieboom  <jessevdk@gnome.org>
+
+	* gtksourceview/gtksourcecontextengine.c:
+	* tests/test-widget.c:
+	
+	Fixed string format warnings
+	
 2009-04-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
 	* gtksourceview/gtksourcecompletion.c:
